# diceutils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/diceutils/: cards.py  charactors.py  dicer.py  exceptions.py  logging.py  parser.py  renderer.py  status.py  utils.py
src/diceutils/renderer/: __init__.py  _models.py  docx.py  html.py  pdf.py
tests/: __init__.py  cached_circle_area_cal.py  single_card.py  test_cachedproperty_1.py  test_cachedproperty_2.py  test_cards.py  test_charactors.py  test_dicer.py  test_logging.py  test_parser.py  test_prod_cards.py  test_renderer.py  test_status.py
