[project]
name = "diceutils"
version = "0.2.1"
description = "骰娘相关插件"
authors = [
    {name = "苏向夜", email = "fu050409@163.com"},
]
dependencies = [
    "infini>=2.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GNU Affero General Public License v3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.1",
]
