[project]
name = "diceutils"
version = "0.2.7"
description = "基于 Infini 标准的骰娘相关组件和工具类"
authors = [
    {name = "苏向夜", email = "fu050409@163.com"},
]
dependencies = [
    "infini>=2.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GNU Affero General Public License v3"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Programming Language :: Python :: 3.12',
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.1",
]
